--- a/EasyChat/src/main/res/layout/include_search_bar.xml
+++ b/EasyChat/src/main/res/layout/include_search_bar.xml
@@ -22,6 +22,7 @@
         android:focusableInTouchMode="true"
         android:textColorHint="#8C8C8C"
         android:hint="@string/search"
+        android:textColor="@color/text_color_main"
         android:textSize="16sp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
