--- a/EasyChat/src/main/res/values/styles.xml
+++ b/EasyChat/src/main/res/values/styles.xml
@@ -115,10 +115,15 @@
         <item name="colorPrimary">@color/color_main</item> <!--浅蓝色-->
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:popupBackground">#000000</item>
     </style>
 
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="ToolbarPopupTheme" parent="@style/ThemeOverlay.AppCompat.Dark">
+        <item name="android:colorBackground">#000000</item>
     </style>
 
 </resources>
