--- a/elapp/src/main/res/layout/item_follower_fans.xml
+++ b/elapp/src/main/res/layout/item_follower_fans.xml
@@ -35,7 +35,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:gravity="center"
-        android:textColor="@color/login_btn_color"
+        android:textColor="@android:color/white"
         android:textSize="13sp"
         android:text="@string/follow"
         android:background="@drawable/common_button_round_three_blue_selector"/>
