修改主页投影白带问题

--- a/EasyChat/src/main/res/values/colors.xml
+++ b/EasyChat/src/main/res/values/colors.xml
@@ -73,4 +73,7 @@
     <color name="color_titlebar_textcolor">#ffffff</color>
     <color name="hv_toobar_shadow_start">#3d000000</color>
     <color name="hv_toobar_shadow_end">#08000000</color>
+
+    <color name="hv_toobar_shadow_start_black">#ad000000</color>
+    <color name="hv_toobar_shadow_end_black">#28000000</color>
 </resources>
