修复 个人中心和个人主页标签重复问题，保存用户资料闪退问题，普通用户能开直播的问题 更换 极光推送的 key

--- a/elapp/src/main/res/layout/activity_image_text_live.xml
+++ b/elapp/src/main/res/layout/activity_image_text_live.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -36,7 +36,7 @@
                     <ImageView
                         android:id="@+id/iv_header_bg"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
 
                 </RelativeLayout>
 
@@ -56,7 +56,7 @@
                         android:layout_marginTop="20dp"
                         android:text="杜斯基"
                         android:textColor="#303030"
-                        android:textSize="18sp"/>
+                        android:textSize="18sp" />
 
                     <LinearLayout
                         android:id="@+id/ll_user_info"
@@ -71,7 +71,7 @@
                             android:layout_height="wrap_content"
                             android:text="四川财经网  投资经理"
                             android:textColor="#303030"
-                            android:textSize="14sp"/>
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -92,7 +92,7 @@
                     android:layout_height="50dp"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="70dp"
-                    android:src="@drawable/somebody"/>
+                    android:src="@drawable/somebody" />
 
             </RelativeLayout>
 
@@ -111,16 +111,16 @@
                         android:layout_height="40dp"
                         android:layout_centerVertical="true"
                         android:scaleType="center"
-                        android:src="@drawable/live_icon_more_back"/>
+                        android:src="@drawable/live_icon_more_back" />
 
                     <TextView
                         android:id="@+id/tv_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="我是标题"
                         android:textColor="#999999"
-                        android:textSize="18sp"/>
+                        android:textSize="18sp"
+                        tools:text="我是标题" />
 
                     <ImageView
                         android:id="@+id/iv_share"
@@ -130,7 +130,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="12dp"
                         android:scaleType="center"
-                        android:src="@drawable/btn_share_w_n"/>
+                        android:src="@drawable/btn_share_w_n" />
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -157,7 +157,7 @@
                 android:layout_height="44dp"
                 android:layout_alignParentLeft="true"
                 android:layout_toLeftOf="@+id/tv_follow"
-                app:tabTextColor="@color/title_text_color"/>
+                app:tabTextColor="@color/title_text_color" />
 
             <TextView
                 android:id="@+id/tv_follow"
@@ -173,14 +173,14 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="关注"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
         </RelativeLayout>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/rl_tab_container"/>
+            android:layout_below="@+id/rl_tab_container" />
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
