--- a/elapp/src/main/res/layout/fragment_user_profile.xml
+++ b/elapp/src/main/res/layout/fragment_user_profile.xml
@@ -245,6 +245,7 @@
         </com.easyvaas.elapp.view.CommonItemButton>
 
         <View
+            android:id="@+id/cib_my_live_divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginLeft="50dp"
