--- a/elapp/src/main/res/layout/fragment_user_profile.xml
+++ b/elapp/src/main/res/layout/fragment_user_profile.xml
@@ -147,6 +147,8 @@
                     android:layout_width="22dp"
                     android:layout_height="22dp"
                     android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="2dp"
                     android:src="@drawable/selector_message_tab"/>
 
                 <TextView
@@ -172,7 +174,8 @@
         <LinearLayout
             android:id="@+id/ll_my_fans"
             style="@style/UserProfileTabStyle"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="5dp">
 
             <TextView
                 android:id="@+id/tv_fans"
@@ -181,12 +184,15 @@
 
             <TextView
                 style="@style/UserTabLabelStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="@string/user_my_fans"/>
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ll_my_follow"
             style="@style/UserProfileTabStyle"
+            android:paddingTop="5dp"
             android:orientation="vertical">
 
             <TextView
@@ -202,6 +208,7 @@
 
         <LinearLayout
             style="@style/UserProfileTabStyle"
+            android:paddingTop="5dp"
             android:orientation="vertical">
 
             <TextView
