--- a/elapp/src/main/res/layout/item_unread_message.xml
+++ b/elapp/src/main/res/layout/item_unread_message.xml
@@ -1,33 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="wrap_content"
+    android:background="@color/background_color_gray">
     <TextView
         android:id="@+id/tv_unread_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:textColor="@color/text_login"
+        android:layout_marginTop="5dp"
         android:text="02/25 15.33"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_below="@+id/tv_unread_time"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:orientation="vertical"
         android:background="@drawable/bg_unread_message_shape">
-        <TextView
-            android:id="@+id/tv_msg_advise"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/live_ready_icon_beauty"
-            android:text="直播消息提醒"/>
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_msg_icon"
+                android:layout_width="15dp"
+                android:src="@drawable/live_ready_icon_beauty"
+                android:layout_marginTop="14dp"
+                android:layout_marginLeft="18dp"
+                android:layout_height="15dp"/>
+            <TextView
+                android:id="@+id/tv_msg_advise"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="14dp"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
+                android:text="直播消息提醒"/>
+
+        </LinearLayout>
+
         <TextView
             android:id="@+id/tv_msg_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
             android:text="今天由我们的小丽为大家主持节目，敬请期待!"/>
     </LinearLayout>
 
