1.修改图文直播界面 间距问题 2.修复消息列表显示的问题 3.在编辑自选股 列表底部 添加 自选股按钮

--- a/elapp/src/main/res/layout/item_image_text_live_header.xml
+++ b/elapp/src/main/res/layout/item_image_text_live_header.xml
@@ -48,6 +48,7 @@
         android:drawablePadding="12dp"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
+        android:textSize="@dimen/text_size_16"
         android:text="@string/vip_list"
         android:textColor="@color/text_color_gray" />
 
