--- a/elapp/src/main/res/drawable/bg_unread_message_shape.xml
+++ b/elapp/src/main/res/drawable/bg_unread_message_shape.xml
@@ -6,10 +6,12 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+       android:shape="rectangle">
 
-    <solid android:color="@color/white" />
-    <stroke android:color="@color/text_login" android:width="1dp"/>
-    <corners android:radius="3dp" />
+    <solid android:color="@color/white"/>
+    <stroke
+        android:width="1dp"
+        android:color="@color/line_gray"/>
+    <corners android:radius="3dp"/>
 
 </shape>
