1. 个人中心，布局有问题 2. 个人中心，列表点击区域错误 3. 个人中心，标签管理(功能完成， 界面还需要调整)

--- a/elapp/src/main/res/layout/item_follower_fans.xml
+++ b/elapp/src/main/res/layout/item_follower_fans.xml
@@ -10,6 +10,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/avatar_big_second_bg_size"
+    android:id="@+id/my_user_item"
     android:background="@drawable/list_item_selector">
     <ImageView
         android:layout_alignParentBottom="true"
