--- a/elapp/src/main/res/layout/activity_userinfo.xml
+++ b/elapp/src/main/res/layout/activity_userinfo.xml
@@ -371,14 +371,50 @@
             android:layout_toRightOf="@id/certificate_tv"
             android:ellipsize="end"
             android:gravity="center_vertical|left"
-            android:singleLine="true"
             android:hint="@string/certificate_hint"
-            android:textColorHint="@color/video_duration_text_color"
+            android:singleLine="true"
             android:textColor="@color/video_duration_text_color"
+            android:textColorHint="@color/video_duration_text_color"
             android:textSize="@dimen/text_size_title_h1" />
 
         <ImageView
             android:id="@+id/certificate_iv6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_arrow_right_personal_more" />
+    </RelativeLayout>
+
+    <ImageView
+        style="@style/default_horizontal_line_style"
+        android:layout_marginLeft="15dp" />
+
+    <RelativeLayout
+        android:id="@+id/user_label"
+        style="@style/item_user_info">
+
+        <TextView
+            android:id="@+id/user_label_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="@string/my_label"
+            android:textColor="@color/login_text_color_6"
+            android:textSize="@dimen/text_size_title_h1" />
+
+        <com.easyvaas.elapp.view.flowlayout.FlowLayout
+            android:id="@+id/user_label_fl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="14dp"
+            android:layout_toLeftOf="@+id/certificate_iv7"
+            android:layout_toRightOf="@+id/user_label_tv"
+            android:gravity="left" />
+
+        <ImageView
+            android:id="@+id/certificate_iv7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
