--- a/elapp/src/main/res/layout/fragment_user_profile.xml
+++ b/elapp/src/main/res/layout/fragment_user_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,7 +20,7 @@
             android:drawablePadding="10dp"
             android:gravity="center_vertical"
             android:text="@string/user_title"
-            android:textColor="@color/text_color_purplish"/>
+            android:textColor="@color/text_color_purplish" />
 
         <ImageView
             android:id="@+id/iv_setting"
@@ -30,13 +29,13 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="16dp"
-            android:src="@drawable/btn_setting_n"/>
+            android:src="@drawable/btn_setting_n" />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/line_gray"/>
+        android:background="@color/line_gray" />
 
     <RelativeLayout
         android:id="@+id/ll_user_edit"
@@ -54,14 +53,15 @@
             android:maxLines="1"
             android:text="@string/login_register"
             android:textSize="16sp"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <LinearLayout
             android:id="@+id/ll_name_signature"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="12dp"
+            android:layout_toLeftOf="@+id/iv_edit"
             android:layout_toRightOf="@+id/iv_userhead"
             android:orientation="vertical">
 
@@ -76,14 +76,14 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:text="guojun"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <ImageView
                     android:id="@+id/iv_gender"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_marginLeft="5dp"
-                    android:src="@drawable/ic_man"/>
+                    android:src="@drawable/ic_man" />
             </LinearLayout>
 
             <TextView
@@ -91,14 +91,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:text="认真学习，天天炒股"/>
+                android:text="认真学习，天天炒股" />
 
             <LinearLayout
                 android:id="@+id/ll_tag_container"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"/>
+                android:orientation="horizontal" />
+
         </LinearLayout>
 
         <com.easyvaas.common.widget.MyUserPhoto
@@ -110,7 +110,7 @@
             android:src="@drawable/account_bitmap_user"
             app:small_height="20dp"
             app:small_icon="@drawable/ic_v"
-            app:small_width="20dp"/>
+            app:small_width="20dp" />
 
         <ImageView
             android:id="@+id/iv_edit"
@@ -119,37 +119,39 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="24dp"
-            android:src="@drawable/btn_next_n"/>
+            android:src="@drawable/btn_next_n" />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/line_gray"/>
+        android:background="@color/line_gray" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/base_white">
+        android:background="@color/base_white"
+        android:divider="@drawable/divider_user_profile"
+        android:showDividers="middle">
 
         <LinearLayout
+            android:id="@+id/fl_message"
             style="@style/UserProfileTabStyle"
+            android:background="?attr/selectableItemBackground"
             android:orientation="vertical">
 
             <FrameLayout
-                android:id="@+id/fl_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
 
                 <ImageView
                     android:id="@+id/iv_message_state"
                     android:layout_width="22dp"
                     android:layout_height="22dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
                     android:layout_marginBottom="2dp"
-                    android:src="@drawable/selector_message_tab"/>
+                    android:layout_marginTop="5dp"
+                    android:src="@drawable/selector_message_tab" />
 
                 <TextView
                     android:id="@+id/tv_message_count"
@@ -163,70 +165,77 @@
                     android:text="999+"
                     android:textColor="@color/text_color_white"
                     android:textSize="10sp"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
             </FrameLayout>
 
             <TextView
-                style="@style/UserTabLabelStyle"
-                android:text="@string/my_message"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/my_message"
+                android:textColor="@color/market_list_stock_name"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ll_my_fans"
             style="@style/UserProfileTabStyle"
+            android:background="?attr/selectableItemBackground"
             android:orientation="vertical"
             android:paddingTop="5dp">
 
             <TextView
                 android:id="@+id/tv_fans"
                 style="@style/UserCountPromptStyle"
-                android:text="0"/>
+                android:text="0" />
 
             <TextView
                 style="@style/UserTabLabelStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/user_my_fans"/>
+                android:text="@string/user_my_fans" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ll_my_follow"
             style="@style/UserProfileTabStyle"
-            android:paddingTop="5dp"
-            android:orientation="vertical">
+            android:background="?attr/selectableItemBackground"
+            android:orientation="vertical"
+            android:paddingTop="5dp">
 
             <TextView
                 android:id="@+id/tv_follow_count"
                 style="@style/UserCountPromptStyle"
-                android:text="0"/>
+                android:text="0" />
 
             <TextView
 
                 style="@style/UserTabLabelStyle"
-                android:text="@string/user_my_follow"/>
+                android:text="@string/user_my_follow" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_my_coin"
             style="@style/UserProfileTabStyle"
-            android:paddingTop="5dp"
-            android:orientation="vertical">
+            android:background="?attr/selectableItemBackground"
+            android:orientation="vertical"
+            android:paddingTop="5dp">
 
             <TextView
                 android:id="@+id/tv_coin_count"
                 style="@style/UserCountPromptStyle"
-                android:text="0"/>
+                android:text="0" />
 
             <TextView
                 android:id="@+id/tv_coin_title"
                 style="@style/UserTabLabelStyle"
-                android:text="@string/my_sum"/>
+                android:text="@string/my_sum" />
         </LinearLayout>
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:background="@color/list_divider_bg"/>
+        android:background="@color/list_divider_bg" />
 
     <!--<ScrollView-->
     <!--android:layout_width="match_parent"-->
@@ -257,7 +266,7 @@
             android:layout_height="1dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="28dp"
-            android:background="@color/line_gray"/>
+            android:background="@color/line_gray" />
 
         <com.easyvaas.elapp.view.CommonItemButton
             android:id="@+id/cib_my_book"
@@ -276,7 +285,7 @@
             android:layout_height="1dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="28dp"
-            android:background="@color/line_gray"/>
+            android:background="@color/line_gray" />
 
         <com.easyvaas.elapp.view.CommonItemButton
             android:id="@+id/cib_my_collection"
@@ -295,7 +304,7 @@
             android:layout_height="1dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="28dp"
-            android:background="@color/line_gray"/>
+            android:background="@color/line_gray" />
 
         <com.easyvaas.elapp.view.CommonItemButton
             android:id="@+id/cib_my_history"
@@ -312,7 +321,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="8dp"
-            android:background="@color/list_divider_bg"/>
+            android:background="@color/list_divider_bg" />
 
         <com.easyvaas.elapp.view.CommonItemButton
             android:id="@+id/cib_my_feedback"
@@ -330,6 +339,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/list_divider_bg"/>
+        android:background="@color/list_divider_bg" />
     <!--</ScrollView>-->
 </LinearLayout>
