--- a/elapp/src/main/res/layout/layout_use_tag.xml
+++ b/elapp/src/main/res/layout/layout_use_tag.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/user_tag_bg"
+    android:background="@drawable/bg_user_tag"
     android:paddingLeft="6dp"
     android:paddingRight="6dp"
     android:text="大盘解说"
