--- a/elapp/src/main/res/values/styles.xml
+++ b/elapp/src/main/res/values/styles.xml
@@ -485,7 +485,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">bottom|center_horizontal</item>
-        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginTop">2dp</item>
         <item name="android:textColor">@color/market_list_stock_name</item>
         <item name="android:textSize">12sp</item>
     </style>
