1. 修复不断弹出登录页面的问题 2. 修复用户添加标签的 UI 问题 3. 修复偶尔没有得到火眼豆的问题 4. 修复退出登录过后 个人中心 页面的标签没有清空的问题

--- a/elapp/src/main/res/layout/activity_user_add_label.xml
+++ b/elapp/src/main/res/layout/activity_user_add_label.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +15,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/list_divider_bg"/>
+        android:background="@color/list_divider_bg" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -26,6 +27,7 @@
             android:id="@+id/label_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
             android:layout_marginRight="10dp"
             android:text="已选标签(最多3个)"
             android:textColor="@color/base_gray"
@@ -41,12 +43,14 @@
             android:textSize="18sp"
             tools:text="3" />
 
-        <com.easyvaas.elapp.view.flowlayout.FlowLayout
+        <com.nex3z.flowlayout.FlowLayout
             android:id="@+id/label_selected_fl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/label_message"
-            android:gravity="left" />
+            app:childSpacing="12dp"
+            app:childSpacingForLastRow="align"
+            app:rowSpacing="16dp" />
 
     </RelativeLayout>
 
@@ -62,16 +66,19 @@
             android:id="@+id/label_all_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
             android:layout_marginRight="10dp"
             android:text="所有标签"
             android:textColor="@color/base_gray"
             android:textSize="16sp" />
 
-        <com.easyvaas.elapp.view.flowlayout.FlowLayout
+        <com.nex3z.flowlayout.FlowLayout
             android:id="@+id/label_all_fl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="left" />
+            app:childSpacing="12dp"
+            app:childSpacingForLastRow="align"
+            app:rowSpacing="16dp" />
 
     </LinearLayout>
 
