--- a/elapp/src/main/res/layout/item_vip_image_live.xml
+++ b/elapp/src/main/res/layout/item_vip_image_live.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/my_live_room_rl"
         android:layout_width="match_parent"
         android:layout_height="96dp"
         android:layout_marginBottom="10dp"
