--- a/elapp/src/main/res/layout/view_image_live_input.xml
+++ b/elapp/src/main/res/layout/view_image_live_input.xml
@@ -16,10 +16,10 @@
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="12dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="12dp"
             android:layout_marginRight="76dp"
-            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
             android:background="#fff"
             android:hint="大师，快来聊天吧"
             android:maxLength="1000"
