--- a/elapp/src/main/res/layout/fragment_image_text_live.xml
+++ b/elapp/src/main/res/layout/fragment_image_text_live.xml
@@ -36,7 +36,7 @@
             android:textSize="16sp"/>
     </FrameLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <com.easyvaas.elapp.view.AutoLoadRecyclerView
         android:id="@+id/rcv_msg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
