1. 修复默认占位文字的错误

--- a/elapp/src/main/res/layout/activity_image_text_live.xml
+++ b/elapp/src/main/res/layout/activity_image_text_live.xml
@@ -54,7 +54,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="20dp"
-                        android:text="杜斯基"
+                        tools:text="杜斯基"
                         android:textColor="#303030"
                         android:textSize="18sp" />
 
