1.修复弹出输入框 布局上移 2.调整banner显示比例 3.去掉国际股票块的显示阴影

--- a/elapp/src/main/res/layout/view_important_news_header.xml
+++ b/elapp/src/main/res/layout/view_important_news_header.xml
@@ -7,7 +7,9 @@
               android:background="@color/news_list_bg_color"
               android:orientation="vertical">
 
-    <include layout="@layout/view_header_discover_slider"/>
+    <include
+        android:id="@+id/banner_layout"
+        layout="@layout/view_header_discover_slider"/>
 
     <LinearLayout
         android:layout_width="match_parent"
