--- a/elapp/src/main/res/layout/view_exponent_cell.xml
+++ b/elapp/src/main/res/layout/view_exponent_cell.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
     android:layout_width="110dp"
@@ -8,6 +9,7 @@
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_weight="1"
+    app:cardElevation="0dp"
     app:cardBackgroundColor="@color/exponent_up"
     app:cardCornerRadius="4dp">
 
