--- a/elapp/src/main/res/layout/view_header_discover_slider.xml
+++ b/elapp/src/main/res/layout/view_header_discover_slider.xml
@@ -12,13 +12,13 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="match_parent"
         android:src="@drawable/banner_default" />
 
     <com.easyvaas.common.imageslider.SliderLayout
         android:id="@+id/recommend_header_slider"
         android:layout_width="match_parent"
-        android:layout_height="240dp" />
+        android:layout_height="match_parent" />
     <View
         android:background="@drawable/banner_mengceng"
         android:layout_width="match_parent"
