1. 修复注册密码传明文的问题 2. bug list上面 UI 问题

--- a/elapp/src/main/res/layout/view_header_discover_slider.xml
+++ b/elapp/src/main/res/layout/view_header_discover_slider.xml
@@ -13,7 +13,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="240dp"
-        android:src="@drawable/banner_default" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/account_bitmap_list" />
 
     <com.easyvaas.common.imageslider.SliderLayout
         android:id="@+id/recommend_header_slider"
