--- a/elapp/src/main/res/layout/fragment_data.xml
+++ b/elapp/src/main/res/layout/fragment_data.xml
@@ -52,6 +52,7 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:layout_weight="4"
             android:background="@drawable/shape_chat_input_bg"
@@ -73,7 +74,7 @@
                 android:layout_height="32dp"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="16dp"
-                android:layout_toLeftOf="@+id/iv_send"
+                android:layout_toLeftOf="@+id/iv_search"
                 android:background="@color/line_gray" />
 
             <ImageView
