--- a/elapp/src/main/res/layout/fragment_image_text_live_data.xml
+++ b/elapp/src/main/res/layout/fragment_image_text_live_data.xml
@@ -19,6 +19,55 @@
         android:background="#f8f8f8"
         android:visibility="gone"/>
 
+    <LinearLayout
+        android:id="@+id/ll_input_area"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/base_white">
+
+        <RelativeLayout
+            android:id="@+id/rl_input_text"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="4"
+            android:background="@drawable/shape_chat_input_bg"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/et_search"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:hint="请输入关键词"
+                android:maxLength="10"
+                android:paddingLeft="14dp"
+                android:textColor="@color/text_color_gray"/>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="32dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="16dp"
+                android:layout_toLeftOf="@+id/iv_search"
+                android:background="@color/line_gray"/>
+
+            <ImageView
+                android:id="@+id/iv_search"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="16dp"
+                android:src="@drawable/market_search"/>
+        </RelativeLayout>
+    </LinearLayout>
+
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/ll_empty"
         android:layout_width="match_parent"
@@ -45,53 +94,5 @@
                 android:textColor="@color/text_color_gray"/>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
-
-    <LinearLayout
-        android:id="@+id/ll_input_area"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/base_white">
-
-        <RelativeLayout
-            android:id="@+id/rl_input_text"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="4"
-            android:background="@drawable/shape_chat_input_bg"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/et_search"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@null"
-                android:gravity="center_vertical"
-                android:hint="请输入关键词"
-                android:maxLength="10"
-                android:paddingLeft="14dp"
-                android:textColor="@color/text_color_gray"/>
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="32dp"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="16dp"
-                android:layout_toLeftOf="@+id/iv_send"
-                android:background="@color/line_gray"/>
-
-            <ImageView
-                android:id="@+id/iv_search"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="16dp"
-                android:src="@drawable/market_search"/>
-        </RelativeLayout>
-    </LinearLayout>
 
 </RelativeLayout>
