--- a/elapp/src/main/res/layout/activity_splash.xml
+++ b/elapp/src/main/res/layout/activity_splash.xml
@@ -1,66 +1,96 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2016 EasyVaas.
   ~ http://www.easyvaas.com
   ~ All rights reserved.
   -->
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/splash_dynamic_rl"
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/splash_dynamic_rl"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:background="@color/background_white"-->
+        <!--android:visibility="gone">-->
+
+        <!--<ImageView-->
+            <!--android:id="@+id/splash_screen_iv"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_marginBottom="120dp"-->
+            <!--android:scaleType="centerCrop" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/splash_timer_tv"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="30dp"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:layout_marginRight="5dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:gravity="top"-->
+            <!--android:textColor="@color/white_alpha_percent_80"-->
+            <!--android:textSize="@dimen/text_size_12" />-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="120dp"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:orientation="vertical">-->
+
+            <!--<ImageView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:src="@drawable/splash_screen_hop_links" />-->
+        <!--</LinearLayout>-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/splash_jump_over_tv"-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="24dp"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_marginBottom="15dp"-->
+            <!--android:layout_marginRight="15dp"-->
+            <!--android:background="@drawable/round_btn_gray_selector"-->
+            <!--android:gravity="center"-->
+            <!--android:text="@string/splash_next_step"-->
+            <!--android:textColor="@color/black_alpha_percent_70"-->
+            <!--android:textSize="@dimen/text_size_12" />-->
+    <!--</RelativeLayout>-->
+
+
+    <ImageView
+        android:id="@+id/iv_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/splash_buttom" />
+
+
+    <ImageView
+        android:id="@+id/iv_top"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        android:background="@color/background_white">
-        <ImageView
-            android:id="@+id/splash_screen_iv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:layout_marginBottom="120dp"/>
+        android:layout_marginBottom="120dp"
+        android:background="@drawable/splash" />
 
-        <TextView
-            android:id="@+id/splash_timer_tv"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="5dp"
-            android:gravity="top"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:textColor="@color/white_alpha_percent_80"
-            android:textSize="@dimen/text_size_12"/>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:gravity="center_vertical">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/splash_screen_hop_links"/>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/splash_jump_over_tv"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="15dp"
-            android:layout_marginRight="15dp"
-            android:gravity="center"
-            android:layout_width="60dp"
-            android:layout_height="24dp"
-            android:background="@drawable/round_btn_gray_selector"
-            android:textColor="@color/black_alpha_percent_70"
-            android:textSize="@dimen/text_size_12"
-            android:text="@string/splash_next_step"/>
-    </RelativeLayout>
+    <Button
+        android:id="@+id/btn_jump"
+        android:layout_width="62dp"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="18dp"
+        android:background="@drawable/selector_splash_exit_btn"
+        android:text="@string/splash_next_step"
+        android:textColor="#999999"
+        android:textSize="14sp"
+        android:visibility="invisible" />
 </RelativeLayout>
