1. 修改自选股页面的逻辑。增加懒加载方式 2. 修改环信使用测试环境或正式环境 key 的方式

--- a/elapp/src/main/res/layout/layout_empty.xml
+++ b/elapp/src/main/res/layout/layout_empty.xml
@@ -21,4 +21,17 @@
         android:layout_marginTop="4dp"
         android:text="@string/feature_no_open_prompt"
         android:textColor="@color/text_color_gray" />
+
+    <TextView
+        android:id="@+id/tv_add_select"
+        android:layout_width="124dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:layout_margin="15dp"
+        android:background="@drawable/shape_add_stock_btn_bg"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="@string/add_stock"
+        android:textColor="@color/text_white"
+        android:textSize="16sp"/>
 </LinearLayout>
