--- a/elapp/src/main/res/layout/item_market_list_stock.xml
+++ b/elapp/src/main/res/layout/item_market_list_stock.xml
@@ -62,6 +62,7 @@
         android:textColor="@color/selector_stock_state_color" />
 
     <View
+        android:id="@+id/view_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
