--- a/elapp/src/main/res/layout/item_market_select_title.xml
+++ b/elapp/src/main/res/layout/item_market_select_title.xml
@@ -1,35 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="horizontal">
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:layout_weight="1"
-        android:background="@color/white"
-        android:gravity="center_vertical"
-        android:paddingLeft="16dp"
-        android:textColor="@color/text_color_gray"
-        android:textSize="16sp"
-        android:text="名称" android:id="@+id/textView3"/>
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:layout_weight="1"
-        android:background="@color/white"
-        android:gravity="center"
-        android:textColor="@color/text_color_gray"
-        android:textSize="16sp"
-        android:text="现价" android:id="@+id/textView"/>
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:background="@color/white"
-        android:textColor="@color/text_color_gray"
-        android:textSize="16sp"
-        android:text="涨跌幅"/>
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="0dp"
+            android:layout_height="43dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:paddingLeft="16dp"
+            android:text="名称"
+            android:textColor="@color/text_color_gray"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="0dp"
+            android:layout_height="43dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:gravity="center"
+            android:text="现价"
+            android:textColor="@color/text_color_gray"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="43dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:gravity="center"
+            android:text="涨跌幅"
+            android:textColor="@color/text_color_gray"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/default_line_color"/>
 </LinearLayout>
